# filesync-CLI

./: .gitmodules  CMakeLists.txt  Dockerfile
src/Applications/include/: Application.hpp
src/Applications/src/: Application.cpp
src/CommandLineParser/: CMakeLists.txt
src/CommandLineParser/include/: CommandLineParser.hpp
src/CommandLineParser/src/: CommandLineParser.cpp
src/Index/include/: Index.hpp
src/Index/src/: Index.cpp
src/cli/: CMakeLists.txt
src/cli/include/: Instructions.hpp  cli.hpp
src/cli/src/: cli.cpp
src/core/: CMakeLists.txt
src/core/include/: ErrorCodes.hpp  FileInfo.hpp  Instructions.hpp  Logger.hpp  ModuleSettings.hpp  UserOutput.hpp  core.hpp
src/core/src/: ErrorCodes.cpp  FileInfo.cpp  Logger.cpp  ModuleSettings.cpp  UserOutput.cpp
tests/CLI/: CLITests.cpp
tests/CommandLineParser/: CommandLineParserTests.cpp
tests/core/: LoggerTests.cpp
